fix alignment
Former-commit-id: 4825f53125eda9626f06f8cf83989857d613ffd8

--- a/assets/less/widget.less
+++ b/assets/less/widget.less
@@ -219,8 +219,14 @@ table td {
   color: @color-B2;
   font-weight: normal;
 }
-.ui-jqgrid .ui-jqgrid-htable th div {
-  text-align: center;
+.ui-jqgrid .ui-jqgrid-htable th {
+  div {
+    text-align: center;
+  }
+  .ui-jqgrid-sortable {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
 }
 
 // DE76: hide horizontal bar when vertical bar shows up
